--- a/templates/base.html
+++ b/templates/base.html
@@ -1,43 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <title>{% block title %} {% endblock %}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistem Informasi Kebun Berdaya</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<style>
+	#navbarsection{
+	background-color: #05BA58;
+  }
+  .navbarCostum{
+	padding-top: 0px;
+	padding-bottom: 0px;
+  }
+</style>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	<ul class="navbar-nav mr-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-	      </li>
-		{% if user.is_authenticated %}
-	      <li class="nav-item">
-	      	<a class="nav-link" href="{% url 'logout' %}">Logout</a>
-	      </li>
-	     <li class="nav-item">
-	      	<a class="nav-link" href="#">{{user}}</a>
-	      </li>
-	    {% else %}
-	      <li class="nav-item">
-	        <a class="nav-link" href="{% url 'signup' %}">Register</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="{% url 'login' %}">Login</a>
-	      </li>
-	    {% endif %}
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+<body>
+	
+	<section id="navbarsection">
+		<nav class="navbar navbar-expand-lg navbar-light secondary-color lighten-1">
+			<a class="navbar-brand navbarCostum" href="#">
+				{% load staticfiles %}
+				<img src="{% static 'asset/sikb-logo.png' %}" height="100" class="d-inline-block"
+				  alt="logo">
+			  </a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
+			  aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent-555">
+			  <ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+				  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+				</li>
+			  </ul>
+
+			  <ul class="navbar-nav ml-auto nav-flex-icons">
+				<li class="nav-item">
+				  <a class="nav-link waves-effect waves-light">
+					<i class="fas fa-envelope"></i>
+				  </a>
+				</li>
+				{% if user.is_authenticated %}
+				<li class="nav-item">
+				  <a class="nav-link" href="#">Halo {{user}}</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+				</li>
+			  {% else %}
+				<li class="nav-item">
+				  <a class="nav-link" href="{% url 'signup' %}">Daftar</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'login' %}">Masuk</a>
+				</li>
+			  {% endif %}
+				</li>
+			  </ul>
+			</div>
+		  </nav>
+		  <!--/.Navbar -->
+		</section>
     <!-- start display message -->
  	{% if messages %}
  	<div class="card bg-success text-white">
@@ -48,5 +74,10 @@
     {% endif %}
     {% block content %}
     {% endblock %}
+
+<!--scripts -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
