modification for routing between forums

--- a/templates/forums/forum_form.html
+++ b/templates/forums/forum_form.html
@@ -3,7 +3,7 @@
 {% block title %} Create Forums{% endblock %}
 
 {% block content %}
-<h2>Add Forum</h2>
+<h2>Tambahkan Forum Diskusi</h2>
 <form method="post">
 	{% csrf_token %}
 	{{ form.as_p }}
