--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,11 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent-555">
 			  <ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-				  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+				  <a class="nav-link" style="color: white;" href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" style="color: white;" href="/forum">Forum <span class="sr-only">(current)</span></a>
+				  </li>
 			  </ul>
 
 			  <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -45,17 +48,17 @@
 				</li>
 				{% if user.is_authenticated %}
 				<li class="nav-item">
-				  <a class="nav-link" href="#">Halo {{user}}</a>
+				  <a class="nav-link" style="color: white;" href="#">Halo {{user}}</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+				  <a class="nav-link" style="color: white;" href="{% url 'logout' %}">Logout</a>
 				</li>
 			  {% else %}
 				<li class="nav-item">
-				  <a class="nav-link" href="{% url 'signup' %}">Daftar</a>
+				  <a class="nav-link" style="color: white;" href="{% url 'signup' %}">Daftar</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'login' %}">Masuk</a>
+					<a class="nav-link" style="color: white;" href="{% url 'login' %}">Masuk</a>
 				</li>
 			  {% endif %}
 				</li>
