forum_list on progress

--- a/templates/forums/forum_form.html
+++ b/templates/forums/forum_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Create Forums{% endblock %}
+{% block title %} Buat Forum{% endblock %}
 
 {% block content %}
 <h2>Tambahkan Forum Diskusi</h2>
