updte: err at detailView

--- a/templates/forums/forum_list.html
+++ b/templates/forums/forum_list.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                  <h3><a href="{% url 'forums-path:forum-detail' forum.slug %}"></a><b>{{forum.title}}</b></h3>
+                  <h3><a href="{% url 'forums-path:forum-detail' forum.slug %}"><b>{{forum.title}}</b></a></h3>
                     <p> {{forum.desc}}
                     </p>
                 </div>
